# pydocstring

./: CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  DESIGN.md  README.md  pydocstring.pyi  pyproject.toml
bindings/python/python/pydocstring/: __init__.py  __init__.pyi  _visitor.py
bindings/python/src/: lib.rs  lib.rs.bak
bindings/python/tests/: test_pydocstring.py
examples/: parse_auto.rs  parse_google.rs  parse_numpy.rs  parse_sphinx.rs  test_ret.rs
src/: ast.rs  cursor.rs  emit.rs  error.rs  google.rs  lib.rs  model.rs  numpy.rs  parse.rs  parser.rs  span.rs  styles.rs  syntax.rs  text.rs  traits.rs  types.rs  views.rs
src/emit/: google.rs  numpy.rs
src/google/: parser.rs
src/numpy/: ast.rs  parser.rs
src/parse/: google.rs  numpy.rs  plain.rs  utils.rs  visitor.rs
src/parse/google/: kind.rs  nodes.rs  parser.rs  to_model.rs
src/parse/numpy/: kind.rs  nodes.rs  parser.rs  to_model.rs
src/parse/plain/: nodes.rs  parser.rs  to_model.rs
src/parser/: google.rs  numpy.rs  sphinx.rs
src/sphinx/: ast.rs  parser.rs
src/styles/: google.rs  numpy.rs  sphinx.rs  utils.rs
src/styles/google/: ast.rs  nodes.rs  parser.rs
src/styles/numpy/: ast.rs  nodes.rs  parser.rs
src/styles/sphinx/: ast.rs  parser.rs
src/types/: google.rs  numpy.rs  sphinx.rs
tests/: detect_style.rs  emit.rs  google_tests.rs  model.rs  numpy_tests.rs  plain.rs  sphinx_tests.rs
tests/google/: args.rs  edge_cases.rs  freetext.rs  main.rs  raises.rs  returns.rs  sections.rs  structured.rs  summary.rs
tests/numpy/: edge_cases.rs  freetext.rs  main.rs  parameters.rs  raises.rs  returns.rs  sections.rs  structured.rs  summary.rs
